[build-system]
requires = ["setuptools", "setuptools_scm", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "systemd-env-file"
dynamic = ["version"]
authors = [
    { name = "Emanuele Giaquinta", email = "emanuele.giaquinta@gmail.com" },
]
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
]
readme = "README.md"
requires-python = ">=3.9"

[project.optional-dependencies]
dev = [
    "mypy",
    "ruff",
]
test = [
    "pytest",
    "pytest-cov",
]

[project.urls]
Homepage = "https://github.com/exg/systemd-env-file"

[tool.setuptools_scm]

[tool.mypy]
strict = true

[tool.ruff]
line-length = 120
src = ["src"]
target-version = "py39"
lint.select = [
  "F",
  "E",
  "I",
  "UP",
  "PLE",
  "PLW",
  "RUF",
]
